--- a/OpenCV/Dockerfile
+++ b/OpenCV/Dockerfile
@@ -49,7 +49,7 @@ RUN \
 
     cd opencv && mkdir build && cd build && \
     cmake -DWITH_QT=ON -DWITH_OPENGL=ON -DFORCE_VTK=ON -DWITH_TBB=ON -DWITH_GDAL=ON -DWITH_XINE=ON -DBUILD_EXAMPLES=ON -DENABLE_PRECOMPILED_HEADERS=OFF -DOPENCV_EXTRA_MODULES_PATH=~/opencv_contrib/modules .. && \
-    make -j $(($(nproc) - 1)) && \
+    make -j4 && \
     make install && \
     ldconfig
 
