--- a/OpenCV_Raspbian/Dockerfile
+++ b/OpenCV_Raspbian/Dockerfile
@@ -12,8 +12,8 @@ RUN \
     apt-get install -y build-essential cmake curl && \
 
     # GUI (if you want to use GTK instead of Qt, replace 'qt5-default' with 'libgtkglext1-dev' and remove '-DWITH_QT=ON' option in CMake):
-    sudo apt-get install -y qt5-default libvtk6-dev
-    
+    apt-get install -y qt5-default libvtk6-dev && \
+
     # Media I/O
     apt-get install -y zlib1g-dev libjpeg-dev libwebp-dev libpng-dev libtiff5-dev libjasper-dev libopenexr-dev libgdal-dev && \
 
