--- a/OpenCV_Raspbian/Dockerfile
+++ b/OpenCV_Raspbian/Dockerfile
@@ -3,5 +3,9 @@ MAINTAINER TRAN Hoang Tung <tran-hoang.tung@usth.edu.vn>
 
 WORKDIR /root
 
+RUN [ "cross-build-start" ]
+
 # Install dependencies
 RUN apt-get update
+
+RUN [ "cross-build-end" ]  
