--- a/OpenCV_Raspbian/Dockerfile
+++ b/OpenCV_Raspbian/Dockerfile
@@ -17,7 +17,7 @@ RUN apt-get update && apt-get install -y --no-install-recommends ca-certificates
 		libjpeg-dev \
 		libmagickcore-dev \
 		libmagickwand-dev \
-		libmysqlclient-dev \
+		default-libmysqlclient-dev \
 		libncurses-dev \
 		libpq-dev \
 		libreadline-dev \
