--- a/OpenCV_Raspbian/Dockerfile
+++ b/OpenCV_Raspbian/Dockerfile
@@ -105,6 +105,6 @@ RUN cd /usr/local/bin \
 CMD ["echo","'No CMD command was set in Dockerfile! Details about CMD command could be found in Dockerfile Guide section in our Docs. Here's the link: http://docs.resin.io/deployment/dockerfile"]
 ENV PYTHONPATH /usr/lib/python3/dist-packages:$PYTHONPATH
 
-WORKDIR /root
+WORKDIR /home
 
 RUN [ "cross-build-end" ]  
