--- a/OpenCV/Dockerfile
+++ b/OpenCV/Dockerfile
@@ -55,15 +55,15 @@ RUN \
     opencv_cmake_flags="-D CMAKE_BUILD_TYPE=RELEASE \
     -D WITH_QT=ON \
     -D WITH_OPENGL=ON \
-    -DFORCE_VTK=ON \
-    -DWITH_TBB=ON \
-    -DWITH_GDAL=ON \
-    -DWITH_XINE=ON \
-    -DBUILD_EXAMPLES=ON \
-    -DENABLE_PRECOMPILED_HEADERS=OFF \
-    -DBUILD_PERF_TESTS=OFF \
-    -DBUILD_TESTS=OFF \
-    -DOPENCV_EXTRA_MODULES_PATH=../../opencv_contrib/modules/" && \
+    -D FORCE_VTK=ON \
+    -D WITH_TBB=ON \
+    -D WITH_GDAL=ON \
+    -D WITH_XINE=ON \
+    -D BUILD_EXAMPLES=ON \
+    -D ENABLE_PRECOMPILED_HEADERS=OFF \
+    -D BUILD_PERF_TESTS=OFF \
+    -D BUILD_TESTS=OFF \
+    -D OPENCV_EXTRA_MODULES_PATH=../../opencv_contrib/modules/" && \
     cd opencv/build && \
     cmake $opencv_cmake_flags .. && \
     make -j $(getconf _NPROCESSORS_ONLN) && \
