--- a/OpenCV_dlib/Dockerfile
+++ b/OpenCV_dlib/Dockerfile
@@ -13,42 +13,28 @@ ENV DLIB_VERSION='19.10' \
 # Build is based on image m03geek/ffmpeg-opencv-dlib
 # https://github.com/SkeLLLa/docker-ffmpeg-opencv-dlib/tree/master/stretch
 
-RUN echo "Dlib: ${DLIB_VERSION}" \
-    && apt-get update && apt-get install -y ${BUILD_DEPS} ${RUNTIME_DEPS} --no-install-recommends \
-    && wget -q https://github.com/davisking/dlib/archive/v${DLIB_VERSION}.zip -O dlib.zip \
-    && dlib_cmake_flags="-D CMAKE_BUILD_TYPE=RELEASE \
+RUN apt-get update && apt-get install -y ${BUILD_DEPS} ${RUNTIME_DEPS} --no-install-recommends && \
+    mkdir -p dlib/build && \
+    curl -L https://github.com/davisking/dlib/archive/v${DLIB_VERSION}.tar.gz | tar xz -C dlib --strip-components 1 && \
+    dlib_cmake_flags="-D CMAKE_BUILD_TYPE=RELEASE \
     -D CMAKE_INSTALL_PREFIX=$LIB_PREFIX \
     -D DLIB_NO_GUI_SUPPORT=OFF \
     -D DLIB_USE_BLAS=ON \
     -D DLIB_GIF_SUPPORT=ON \
     -D DLIB_PNG_SUPPORT=ON \
     -D DLIB_JPEG_SUPPORT=ON \
-    -D DLIB_USE_CUDA=OFF" \
-    && unzip -qq dlib.zip \
-    && mv dlib-${DLIB_VERSION} dlib \
-    && rm dlib.zip \
-    && cd dlib \
-    && mkdir -p build \
-    && cd build \
-    && cmake $dlib_cmake_flags .. \
-    && make -j $(getconf _NPROCESSORS_ONLN) \
-    && make install \
-    && cd /home/dlib/examples \
-    && mkdir build \
-    && cd build \
-    && cmake .. \
-    && cmake --build . --config Release \
-    && find . -maxdepth 1 -type f -perm -a=x -print0 | xargs -0 -I {} cp {} /usr/local/bin \
-    && cd /home/dlib/tools/imglab \
-    && mkdir build \
-    && cd build \
-    && cmake .. \
-    && cmake --build . --config Release \
-    && make install \
-    # && cp ../dlib/*.txt $LIB_PREFIX/include/dlib/ \
-    && apt-get autoclean && apt-get clean \
-    && rm -rf /var/lib/apt/lists/* /tmp/* /var/tmp/*
-    # && apt-get purge -y --auto-remove $BUILD_DEPS \
-    # && apt-get autoremove -y --purge \
-    # && apt-get install -y $RUNTIME_DEPS --no-install-recommends \
-    # && rm -rf /var/lib/apt/lists/* /usr/share/man /usr/local/share/man /tmp/*
+    -D DLIB_USE_CUDA=OFF" && \
+    cd dlib/build && \
+    cmake $dlib_cmake_flags .. && \
+    make -j $(getconf _NPROCESSORS_ONLN) && \
+    make install && \
+    cd ../examples && mkdir build && cd build && \
+    cmake .. && \
+    cmake --build . --config Release && \
+    find . -maxdepth 1 -type f -perm -a=x -print0 | xargs -0 -I {} cp {} /usr/local/bin && \
+    cd ../../tools/imglab && mkdir build && cd build && \
+    cmake .. && \
+    cmake --build . --config Release && \
+    make install && \
+    apt-get autoclean && apt-get clean && \
+    rm -rf /var/lib/apt/lists/* /tmp/* /var/tmp/*
