--- a/GPU/OpenCV/Dockerfile
+++ b/GPU/OpenCV/Dockerfile
@@ -1,10 +1,10 @@
 FROM thtung1/gpu_base
 MAINTAINER TRAN Hoang Tung <tran-hoang.tung@usth.edu.vn>
 
-RUN opencv_cmake_flags="-D CMAKE_BUILD_TYPE=RELEASE \
+RUN cd opencv/build && \
+    cmake -D CMAKE_BUILD_TYPE=RELEASE \
     -D WITH_QT=ON \
-    -DCUDA_GENERATION=Pascal \
-#    "" -DCUDA_ARCH_BIN="6.1" -DCUDA_ARCH_PTX="6.1" \
+    -D CUDA_GENERATION=Pascal \
     -D WITH_OPENGL=ON \
     -D FORCE_VTK=ON \
     -D WITH_TBB=ON \
@@ -14,9 +14,7 @@ RUN opencv_cmake_flags="-D CMAKE_BUILD_TYPE=RELEASE \
     -D ENABLE_PRECOMPILED_HEADERS=OFF \
     -D BUILD_PERF_TESTS=OFF \
     -D BUILD_TESTS=OFF \
-    -D OPENCV_EXTRA_MODULES_PATH=../../opencv_contrib/modules/" && \
-    cd opencv/build && \
-    cmake $opencv_cmake_flags .. && \
+    -D OPENCV_EXTRA_MODULES_PATH=../../opencv_contrib/modules/ .. && \
     make -j $(getconf _NPROCESSORS_ONLN) && \
     make install && \
     ldconfig
