--- a/GPU/tensorflow_noroot/Dockerfile
+++ b/GPU/tensorflow_noroot/Dockerfile
@@ -1,4 +1,4 @@
-FROM tensorflow/tensorflow:1.8.0-devel-gpu-py3
+FROM tensorflow/tensorflow:1.8.0-devel-gpu
 MAINTAINER TRAN Hoang Tung <tran-hoang.tung@usth.edu.vn>
 
 WORKDIR /home
@@ -50,21 +50,21 @@ RUN \
     mkdir -p opencv/build && \
     curl -L https://github.com/opencv/opencv/archive/${OPENCV_VERSION}.tar.gz | tar xz -C opencv --strip-components 1 && \
     mkdir opencv_contrib && \
-    curl -L https://github.com/opencv/opencv_contrib/archive/${OPENCV_VERSION}.tar.gz | tar xz -C opencv_contrib --strip-components 1
+    curl -L https://github.com/opencv/opencv_contrib/archive/${OPENCV_VERSION}.tar.gz | tar xz -C opencv_contrib --strip-components 1 && \
     cd opencv/build && \
-    cmake -D CMAKE_BUILD_TYPE=RELEASE \
-    -D WITH_QT=ON \
-    -D WITH_CUDA=OFF \
-    -D WITH_OPENGL=ON \
-    -D FORCE_VTK=ON \
-    -D WITH_TBB=ON \
-    -D WITH_GDAL=ON \
-    -D WITH_XINE=ON \
-    -D BUILD_EXAMPLES=ON \
-    -D ENABLE_PRECOMPILED_HEADERS=OFF \
-    -D BUILD_PERF_TESTS=OFF \
-    -D BUILD_TESTS=OFF \
-    -D OPENCV_EXTRA_MODULES_PATH=../../opencv_contrib/modules/ .. && \
-    make -j $(getconf _NPROCESSORS_ONLN) && \
-    make install && \
+#    cmake -D CMAKE_BUILD_TYPE=RELEASE \
+#    -D WITH_QT=ON \
+#    -D WITH_CUDA=OFF \
+#    -D WITH_OPENGL=ON \
+#    -D FORCE_VTK=ON \
+#    -D WITH_TBB=ON \
+#    -D WITH_GDAL=ON \
+#    -D WITH_XINE=ON \
+#    -D BUILD_EXAMPLES=ON \
+#    -D ENABLE_PRECOMPILED_HEADERS=OFF \
+#    -D BUILD_PERF_TESTS=OFF \
+#    -D BUILD_TESTS=OFF \
+#    -D OPENCV_EXTRA_MODULES_PATH=../../opencv_contrib/modules/ .. && \
+#    make -j $(getconf _NPROCESSORS_ONLN) && \
+#    make install && \
     ldconfig
