--- a/GPU/devel/Dockerfile
+++ b/GPU/devel/Dockerfile
@@ -6,7 +6,8 @@ WORKDIR /home
 # Install dependencies
 RUN \
     # Keep Ubuntu up to date
-    apt-get update && apt-get upgrade -y && \
+    apt-get update && \
+    # apt-get upgrade -y && \
 
     # Build tools 
     apt-get install -y build-essential cmake curl && \
