Add OpenVino to OpenCV Compile

--- a/GPU/tensorflow_noroot/Dockerfile
+++ b/GPU/tensorflow_noroot/Dockerfile
@@ -7,8 +7,11 @@ ENV OPENCV_VERSION='3.4.1'
 
 # Install dependencies
 RUN \
-    # Keep Ubuntu up to date
-    apt-get update && apt-get upgrade -y && \
+    # Update Ubuntu source files
+    apt-get update && \
+    
+    # You should never upgrade!!!
+    # apt-get upgrade -y && \
 
     # Build tools
     apt-get install -y build-essential cmake curl && \
@@ -39,6 +42,9 @@ RUN \
 
     # sudo
     apt-get install -y sudo && \
+    
+    # jupyterlab to manage python easily
+    pip install jupyterlab && \
 
     # Cleanup
     apt-get autoclean && apt-get clean && \
@@ -52,19 +58,20 @@ RUN \
     mkdir opencv_contrib && \
     curl -L https://github.com/opencv/opencv_contrib/archive/${OPENCV_VERSION}.tar.gz | tar xz -C opencv_contrib --strip-components 1 && \
     cd opencv/build && \
-#    cmake -D CMAKE_BUILD_TYPE=RELEASE \
-#    -D WITH_QT=ON \
-#    -D WITH_CUDA=OFF \
-#    -D WITH_OPENGL=ON \
-#    -D FORCE_VTK=ON \
-#    -D WITH_TBB=ON \
-#    -D WITH_GDAL=ON \
-#    -D WITH_XINE=ON \
-#    -D BUILD_EXAMPLES=ON \
-#    -D ENABLE_PRECOMPILED_HEADERS=OFF \
-#    -D BUILD_PERF_TESTS=OFF \
-#    -D BUILD_TESTS=OFF \
-#    -D OPENCV_EXTRA_MODULES_PATH=../../opencv_contrib/modules/ .. && \
-#    make -j $(getconf _NPROCESSORS_ONLN) && \
-#    make install && \
+#     cmake -D CMAKE_BUILD_TYPE=RELEASE \
+#     -D ENABLE_CXX11=ON -D WITH_INF_ENGINE=ON \ # Enable OpenVino
+#     -D WITH_QT=ON \
+#     -D WITH_CUDA=OFF \
+#     -D WITH_OPENGL=ON \
+#     -D FORCE_VTK=ON \
+#     -D WITH_TBB=ON \
+#     -D WITH_GDAL=ON \
+#     -D WITH_XINE=ON \
+#     -D BUILD_EXAMPLES=ON \
+#     -D ENABLE_PRECOMPILED_HEADERS=OFF \
+#     -D BUILD_PERF_TESTS=OFF \
+#     -D BUILD_TESTS=OFF \
+#     -D OPENCV_EXTRA_MODULES_PATH=../../opencv_contrib/modules/ .. && \
+#     make -j $(getconf _NPROCESSORS_ONLN) && \
+#     make install && \
     ldconfig
