--- a/GPU/tensorflow_noroot/Dockerfile
+++ b/GPU/tensorflow_noroot/Dockerfile
@@ -1,9 +1,9 @@
-FROM tensorflow/tensorflow:1.8.0-devel-gpu
+FROM tensorflow/tensorflow:1.12.0-devel-gpu-py3
 MAINTAINER TRAN Hoang Tung <tran-hoang.tung@usth.edu.vn>
 
 WORKDIR /home
 
-ENV OPENCV_VERSION='3.4.1'
+ENV OPENCV_VERSION='3.4.4'
 
 # Install dependencies
 RUN \
@@ -58,20 +58,19 @@ RUN \
     mkdir opencv_contrib && \
     curl -L https://github.com/opencv/opencv_contrib/archive/${OPENCV_VERSION}.tar.gz | tar xz -C opencv_contrib --strip-components 1 && \
     cd opencv/build && \
-#     cmake -D CMAKE_BUILD_TYPE=RELEASE \
-#     -D ENABLE_CXX11=ON -D WITH_INF_ENGINE=ON \ # Enable OpenVino
-#     -D WITH_QT=ON \
-#     -D WITH_CUDA=OFF \
-#     -D WITH_OPENGL=ON \
-#     -D FORCE_VTK=ON \
-#     -D WITH_TBB=ON \
-#     -D WITH_GDAL=ON \
-#     -D WITH_XINE=ON \
-#     -D BUILD_EXAMPLES=ON \
-#     -D ENABLE_PRECOMPILED_HEADERS=OFF \
-#     -D BUILD_PERF_TESTS=OFF \
-#     -D BUILD_TESTS=OFF \
-#     -D OPENCV_EXTRA_MODULES_PATH=../../opencv_contrib/modules/ .. && \
-#     make -j $(getconf _NPROCESSORS_ONLN) && \
-#     make install && \
+    cmake -D CMAKE_BUILD_TYPE=RELEASE \
+    -D WITH_QT=ON \
+    -D WITH_CUDA=OFF \
+    -D WITH_OPENGL=ON \
+    -D FORCE_VTK=ON \
+    -D WITH_TBB=ON \
+    -D WITH_GDAL=ON \
+    -D WITH_XINE=ON \
+    -D BUILD_EXAMPLES=OFF \
+    -D ENABLE_PRECOMPILED_HEADERS=OFF \
+    -D BUILD_PERF_TESTS=OFF \
+    -D BUILD_TESTS=OFF \
+    -D OPENCV_EXTRA_MODULES_PATH=../../opencv_contrib/modules/ .. && \
+    make -j $(getconf _NPROCESSORS_ONLN) && \
+    make install && \
     ldconfig
