--- a/GPU/tensorflow_noroot/Dockerfile
+++ b/GPU/tensorflow_noroot/Dockerfile
@@ -54,7 +54,7 @@ RUN \
     apt install -y sudo && \
 
     # jupyterlab to manage python easily
-    pip install jupyterlab matplotlib && \
+    pip install jupyterlab matplotlib scipy && \
 
     # Cleanup
     apt autoclean && apt clean && \
