--- a/GPU/tensorflow_noroot/Dockerfile
+++ b/GPU/tensorflow_noroot/Dockerfile
@@ -1,4 +1,4 @@
-FROM tensorflow/tensorflow:2.0.0b1-gpu-py3
+FROM tensorflow/tensorflow:2.0.0rc0-gpu-py3
 MAINTAINER TRAN Hoang Tung <tran-hoang.tung@usth.edu.vn>
 
 WORKDIR /home
