--- a/GPU/tensorflow_noroot/Dockerfile
+++ b/GPU/tensorflow_noroot/Dockerfile
@@ -63,11 +63,11 @@ RUN \
 
 # Jupyter lab
 RUN \
-    pip install jupyterlab matplotlib scipy jupyter_contrib_nbextensions yapf ipywidgets && \
+    pip install jupyterlab matplotlib scipy jupyter_contrib_nbextensions yapf ipywidgets ipympl && \
 
     # Extensions for jupyterlab and notebook
     # for notebook localhost:8889/tree
-    jupyter contrib nbextension install --user && \
+    jupyter contrib nbextension install && \
     jupyter nbextension enable hinterland/hinterland && \
     jupyter nbextension enable code_prettify/code_prettify && \
     jupyter nbextension enable codefolding/main && \
@@ -77,6 +77,10 @@ RUN \
     jupyter nbextension enable --py --sys-prefix widgetsnbextension && \
     jupyter labextension install @jupyter-widgets/jupyterlab-manager && \
 
+    #jupyter matplotlib: add this to the notebook: %matplotlib widget
+    jupyter labextension install @jupyter-widgets/jupyterlab-manager
+    jupyter labextension install jupyter-matplotlib
+    
     # Go to definition (Ctrl + Alt + B keyboard-only)
     jupyter labextension install @krassowski/jupyterlab_go_to_definition
 
